plugins {
    id 'application'
    id 'eclipse'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

mainClassName = 'de.helicopter_vs_aliens.Main'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:32.1.2-jre'
    implementation 'org.apache.commons:commons-lang3:3.15.0'
    
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
    testImplementation 'org.mockito:mockito-core:4.9.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'
}

jar {
    manifest {
        attributes('Main-Class': 'de.helicopter_vs_aliens.Main')
    }
}

javafx {
    version = "18"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.graphics', 'javafx.swing', 'javafx.base', 'javafx.web' ]
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

/*tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:unchecked"
}*/
